<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shows.movie.MovieFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_show" />

</FrameLayout>